--- a/src/components/Workspace/Workspace.module.scss
+++ b/src/components/Workspace/Workspace.module.scss
@@ -1,9 +1,11 @@
 .workspace {
   position: relative;
   width: 100%;
-  height: 500px; // фиксированная высота для наглядности, позже можно сделать резиновой
+  height: 60vh;
+  min-height: 400px;
   background-color: #ecf0f1;
   border: 2px dashed #bdc3c7;
   border-radius: 8px;
-  overflow: hidden; // чтобы объекты не выходили за границы
+  overflow: hidden;
+  touch-action: none;
 }
