--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -19,17 +19,17 @@ html {
 }
 
 html::-webkit-scrollbar {
-  width: 8px; /* ширина полосы */
-  background: transparent; /* фон прозрачный */
+  width: 8px;
+  background: transparent;
 }
 
 html::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.2); /* полупрозрачный ползунок */
+  background: rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
 
 html::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.5); /* при наведении становится темнее */
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .content {
@@ -53,9 +53,9 @@ h1 {
   margin-right: 8px;
   transition: background-color 0.2s;
 
-  white-space: nowrap; // запрещает перенос текста
-  overflow: hidden; // скрывает выходящий за пределы контент
-  text-overflow: ellipsis; // добавляет многоточие, если текст не помещается
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   max-width: 100%;
 
   &:hover {
