--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -9,10 +9,10 @@
   margin-right: 8px;
   transition: background-color 0.2s;
 
-  white-space: nowrap; // запрещает перенос текста
-  overflow: hidden; // скрывает выходящий за пределы контент
-  text-overflow: ellipsis; // добавляет многоточие, если текст не помещается
-  max-width: 100%; // ограничивает ширину рамками родителя
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
 
   &:hover {
     background-color: #2980b9;
